--- a/influxdb/运行.md
+++ b/influxdb/运行.md
@@ -5,10 +5,7 @@
 上传文件到虚拟机
 scp -r /Users/gitHub/compose-file/influxdb/docker-compose.yml root@192.168.32.2:/usr/local/influxdb
 
-执行
-1、需先执行zk
-
-2、执行influxdb
+执行influxdb
 cd /usr/local/influxdb
 
 docker-compose up -d
