--- a/mongo/运行.md
+++ b/mongo/运行.md
@@ -5,10 +5,7 @@
 上传文件到虚拟机
 scp -r /Users/gitHub/compose-file/mongo/docker-compose.yml root@192.168.32.2:/usr/local/mongo
 
-执行
-1、需先执行zk
-
-2、执行mongo
+执行mongo
 cd /usr/local/mongo
 
 docker-compose up -d
