--- a/mysql8/运行.md
+++ b/mysql8/运行.md
@@ -5,10 +5,7 @@
 上传文件到虚拟机
 scp -r /Users/gitHub/compose-file/mysql8/docker-compose.yml root@192.168.32.2:/usr/local/mysql8
 
-执行
-1、需先执行zk
-
-2、执行mysql8
+执行mysql8
 cd /usr/local/mysql8
 
 docker-compose up -d
