--- a/redis/运行.md
+++ b/redis/运行.md
@@ -7,10 +7,7 @@ scp -r /Users/gitHub/compose-file/redis/docker-compose.yml root@192.168.32.2:/us
 scp -r /Users/gitHub/compose-file/redis/redis.conf root@192.168.32.2:/usr/local/redis
 
 
-执行
-1、需先执行zk
-
-2、执行redis
+执行redis
 cd /usr/local/redis
 
 docker-compose up -d
