--- a/mysql5.7/运行.md
+++ b/mysql5.7/运行.md
@@ -5,10 +5,7 @@
 上传文件到虚拟机
 scp -r /Users/gitHub/compose-file/mysql5.7/docker-compose.yml root@192.168.32.2:/usr/local/mysql5.7
 
-执行
-1、需先执行zk
-
-2、执行mysql5.7
+执行mysql5.7
 cd /usr/local/mysql5.7
 
 docker-compose up -d
