修改使用自定义docker，新增创建集群命令

--- a/redis-cluster/运行.md
+++ b/redis-cluster/运行.md
@@ -11,3 +11,5 @@ cd /usr/local/redis-cluster
 
 docker-compose up -d
 
+首次运行之后，需要构建集群
+docker run --rm -it zvelo/redis-trib create --replicas 1 192.168.32.2:6391 192.168.32.2:6392 192.168.32.2:6393 192.168.32.2:6394 192.168.32.2:6395 192.168.32.2:6396
