修改redis集群部署，新增zk创建网络指定子网网段

--- a/redis-cluster/运行.md
+++ b/redis-cluster/运行.md
@@ -2,14 +2,28 @@
 
 将文件docker-compose.yml拷贝到/usr/local/redis-cluster
 
-上传文件到虚拟机
+上传文件到虚拟机(config配置中默认使用bridge方式)
 scp -r /Users/gitHub/compose-file/redis-cluster/docker-compose.yml root@192.168.32.2:/usr/local/redis-cluster
 scp -r /Users/gitHub/compose-file/redis-cluster/config root@192.168.32.2:/usr/local/redis-cluster
+
+创建网络
+docker network create redis-cluster_redis --subnet 172.22.2.0/24 --driver bridge
 
 执行redis-cluster
 cd /usr/local/redis-cluster
 
 docker-compose up -d
 
-首次运行之后，需要构建集群
+首次运行之后或者 docker-compose down之后，需要构建集群
 docker run --rm -it zvelo/redis-trib create --replicas 1 192.168.32.2:6391 192.168.32.2:6392 192.168.32.2:6393 192.168.32.2:6394 192.168.32.2:6395 192.168.32.2:6396
+
+
+验证
+进入容器
+docker exec -it 容器ID /bin/bash
+连接redis
+redis-cli -c -h 192.168.32.2 -p 6391
+
+cluster info
+cluster nodes
+
