--- a/zookeeper-cluster/运行.md
+++ b/zookeeper-cluster/运行.md
@@ -7,8 +7,7 @@ scp -r /Users/gitHub/compose-file/zookeeper-cluster/docker-compose.yml root@192.
 
 执行
 首次执行新增虚拟网络（仅首次时执行）
-docker network create zknet --driver bridge
-
+docker network create zknet --subnet 172.22.1.0/24 --driver bridge
 
 cd /usr/local/zookeeper-cluster
 
