修改redis集群Md文件

--- a/redis-cluster/运行.md
+++ b/redis-cluster/运行.md
@@ -1,5 +1,8 @@
 虚拟机默认目录
 
+
+注意: ip不一致时，需要自行修改ip: 192.168.32.2   包括 nodes-6391.conf等的配置文件中的 cluster-announce-ip 配置
+
 将文件docker-compose.yml拷贝到/usr/local/redis-cluster
 
 上传文件到虚拟机(config配置中默认使用bridge方式)
